--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,12 +37,15 @@ add_executable(app
   src/TaskSystem/CancellationToken.hpp
   src/TaskSystem/TimeoutGuard.hpp
   src/TaskSystem/TaskExtensions.hpp
+  src/TaskSystem/EventBus.hpp
+  src/TaskSystem/EventBus.cpp
   src/Demo/Demo.cpp
   src/Demo/CoroutineDemo.cpp
   src/Demo/ReturnValueDemo.cpp
   src/Demo/ExceptionHandlingDemo.cpp
   src/Demo/CancellationDemo.cpp
   src/Demo/ThenSuccessDemo.cpp
+  src/Demo/EventBusDemo.cpp
 )
 
 target_include_directories(app PRIVATE
